FOLSPRINGB-144: Add support for Cql filtering by (un)defined attribute value (#135)